fix sonar issues.