@@ -18,7 +18,7 @@ import java.util.stream.Collectors;
  * It uses JEXL expressions to determine if a SinkRecord matches the splitter's criteria.
  * If it matches, it splits the message body according to the specified pattern and limit.
  */
-public class MessageSplitter<T extends ConnectRecord> {
+public class MessageSplitter<T extends ConnectRecord<T>> {
 
     private final String id;
     private final String splitPattern;
@@ -82,7 +82,7 @@ public class MessageSplitter<T extends ConnectRecord> {
             List<String> list = split(body);
             return list.stream()
                     .map(part-> fromStringPartToRecordFunction.apply(connectRecord,part))
-                    .collect(Collectors.toList());
+                    .toList();
         }else{
             return List.of(connectRecord);
         }
